[package]
name = "wbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
eyre = "0.6.8"
libc = "0.2.147"
native-tls = "0.2.11"
parking_lot = "0.12.1"
regex = "1.9.3"
rustls = "0.21.6"
tokio = { version = "1.31.0", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "io-util",
] }
tokio-native-tls = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
